@@ -4,6 +4,7 @@ update-manager (1:0.59.7) unstable; urgency=low
   * DistUpgrade/DistUpgradeControler.py:
     - fix wording of the "use network" question
     - better apport integration
+    - fix in the progress reporting where the report was off-by-one
   
  --
 
